# GameOfLife

./: .gitignore  CMakeLists.txt
include/: game.hpp  game_constants.hpp
src/: game.cpp  main.cpp
